# react-electron-gPRC-boilerplate

./: .eslintignore  .eslintrc.js  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  start_server.spec
.github/workflows/: test.yml
protos/: routes.proto
release/app/: package-lock.json  package.json
src/__tests__/: App.test.tsx
src/engine/: routes_pb2.py  routes_pb2_grpc.py  runtime.py  server.py  start_server.py  test_client.py
src/main/: client.js  main.ts  preload.js  start-server.ts
src/renderer/: App.tsx  index.tsx
